# claude-code7

./: .gitignore  CLAUDE_CODE_ARCHITECTURE.md  DEVELOPMENT_WORKFLOW.md  RUST_FFI_DOC.md  RUST_FLUTTER_ARCHITECTURE.md  RUST_FLUTTER_DEVELOPMENT_PLAN.md  RUST_IMPLEMENTATION_PLAN.md  package-lock.json
rust-core/: Cargo.toml  build.rs  cbindgen.toml
rust-core/.cargo/: config.toml
rust-core/include/: claude_core.h
rust-core/src/: jni.rs  lib.rs
rust-core/src/analytics/: mod.rs
rust-core/src/api/: mod.rs  rate_limiter.rs
rust-core/src/api/auth/: mod.rs  (+1 more)
rust-core/src/auth/: api_key.rs  keychain.rs  mod.rs  oauth.rs
rust-core/src/bridge/: c_api.rs  mod.rs
rust-core/src/buddy/: mod.rs
rust-core/src/commands/: mod.rs
rust-core/src/cost/: mod.rs
rust-core/src/daemon/: mod.rs
rust-core/src/db/: config_dao.rs  connection.rs  message_dao.rs  mod.rs  schema.rs  session_dao.rs
rust-core/src/engine/: context_manager.rs  conversation.rs  mod.rs  query.rs  stream.rs
rust-core/src/hooks/: mod.rs
rust-core/src/keybindings/: mod.rs
rust-core/src/lsp/: mod.rs
rust-core/src/mcp/: mod.rs
rust-core/src/memory/: mod.rs
rust-core/src/message/: types.rs
rust-core/src/permissions/: mod.rs
rust-core/src/plugins/: mod.rs
rust-core/src/sandbox/: mod.rs
rust-core/src/session/: config.rs  config_manager.rs  error.rs  mod.rs  storage.rs
rust-core/src/skills/: mod.rs
rust-core/src/state/: mod.rs
rust-core/src/tools/: mod.rs
rust-core/src/update/: mod.rs
rust-core/src/utils/: errors.rs  mod.rs
rust-core/src/vim/: mod.rs
rust-core/src/voice/: mod.rs
(+26 files in other folders)
