[package]
name = "claude-core"
version = "0.1.0"
edition = "2021"
authors = ["Claude Team"]
description = "Rust core library for Claude Code mobile"
license = "MIT"

[lib]
name = "claude_core"
crate-type = ["cdylib", "rlib"]

# 只编译 Android 平台 (ARM64)
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
once_cell = "1"
parking_lot = "0.12"
futures = "0.3"
bytes = "1"
http = "1"
url = "2"
async-trait = "0.1"
jni = { version = "0.21", optional = true }

[build-dependencies]
cbindgen = "0.26"

[features]
default = ["c-api", "jni"]
jni = ["dep:jni"]
c-api = []
